Implement relay-based multiplayer without setup
- Switch network lobby to room-code based relay flow
- Restore host-authoritative single game loop with input intents
- Fix mirroring precision for troop/building placement
- Hide opponent deck in lobby (show hidden state)
- Remove broker prefix from room codes
- Add ping-based connection quality indicator
- Use queue-based network writer for stable sends
- Add opponent hand validation for remote deploys